# lite-router

./: .gitignore  README.md  docker-compose.yaml  policies.yaml  pyproject.toml
deploy/: RUNBOOK.md
deploy/gpu-box/: classifier-svc.service  ollama-env.conf
deploy/litellm/: Dockerfile  custom_callbacks.py  litellm_config.yaml
migrations/: 0001_router_decisions.sql  0002_first_messages.sql  0003_rollup_view.sql  0004_client_column.sql
scripts/: load_test.py  migrate.py  replay_shadow.py  retention_purge.py
tests/: conftest.py
tests/fixtures/: policies.yaml
tests/integration/: conftest.py  it_helpers.py  litellm_config.yaml  test_opencode.py  test_routing.py
tests/mock_classifier/: Dockerfile  app.py
tests/unit/: test_client.py  test_decision_log.py  test_escalation.py  test_hook.py  test_overrides.py  test_policies.py  test_policies_ladder.py  test_session_key.py  test_session_store.py  test_state_machine.py
